Add player.properties
Signed-off-by: Shelley Lambert <slambert@gmail.com>